# fastapi-react-admin

./: .gitignore  LICENSE  admin.ini  pyproject.toml
fastapi_react_admin/: __init__.py  auth.py  commands.py  config.py  constants.py  dependencies.py  entities.py  mappings.py  utils.py
fastapi_react_admin/components/: __init__.py  create.py  list.py  retrieve.py  update.py
fastapi_react_admin/core/: __init__.py  app.py  models.py
fastapi_react_admin/fields/: __init__.py  fields.py  inputs.py
fastapi_react_admin/properties/: __init__.py  auth.py  data.py  history.py
fastapi_react_admin/routers/: __init__.py  create.py  delete.py  list.py  reference.py  retrieve.py  update.py
